<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:maxLines = "10000"
    android:scrollbars = "vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/backgroundup"
    tools:context=".About">


    <TextView
        android:text="Developers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ABOUT"
        android:textSize="55sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/mudit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Mudit"
        android:layout_marginTop="23dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_below="@+id/Developer"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textStyle="normal|italic" />

    <TextView
        android:text="@string/Tarini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Tarini"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_below="@+id/Design"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textStyle="normal|italic" />

    <TextView
        android:text="@string/developer"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:id="@+id/Developer"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_width="200dp"
        android:layout_below="@+id/ABOUT"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/design"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Design"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/supported"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:id="@+id/textView"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_below="@+id/Tarini"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/Dost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:id="@+id/textView2"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textStyle="normal|italic"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />


</RelativeLayout>